examples/core/errors/type_errors/05_constructor.core.tao
// Constructor Application
// Constructors are applied like functions: #Tag(argument)
// Note: Constructors must be defined in the type context
// This example shows valid constructor syntax using Church encoding
// since full ADT support requires a prelude/type definition system
let some = x -> #Some(x) in
some(42)
